<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="player_1_0">Player 1 : 0</string>
    <string name="x">X</string>
    <string name="player_2_0">Player 2 : 0</string>
    <string name="o">O</string>
    <string name="reset">RESET</string>
    <string name="select_mode">Select Mode :</string>
    <string name="player_with_computer">Player with Computer</string>
    <string name="play_with_your_friend">Play with your friend</string>
</resources>