<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/select_mode"
        android:textColor="#000055"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_single_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_single_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/border2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/player_with_computer"
        android:textColor="#000055"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_multi_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/border2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/play_with_your_friend"
        android:textColor="#000055"
        android:textSize="25sp" />
</RelativeLayout>