<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_P1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/player_1_0"
            android:textColor="#64dd17"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_p1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_P1"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/tv_P1"
            android:text="@string/x"
            android:textColor="#ff0000"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/tv_P2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_P1"
            android:layout_marginTop="16dp"
            android:text="@string/player_2_0"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_p2_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_P2"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/tv_P2"
            android:text="@string/o"
            android:textColor="#0000ff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_P2"
            android:layout_alignParentEnd="true"
            android:background="@drawable/reset_border"
            android:padding="16dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mat_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/mat_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/mat_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mat_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/mat_11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/mat_12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mat_20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/mat_21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/mat_22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:textSize="65sp" />
    </LinearLayout>
</LinearLayout>